--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,17 @@
 body {
-  background-image: url(background1.jpg)
-
+  background-image: url(background1.jpg) 
 }
-h1 {color: rgb(0, 21, 211);}
+body {background-repeat: no-repeat; background-size: cover;}
+
+h1 {color: rgb(91, 106, 243); font-family: Arial, Helvetica, sans-serif; size: 30px;}
+
+img {
+  border-radius: 100px;
+  display: block;
+  width: 15%;
+}
+
+.info list ul {color: rgb(91, 106, 243); font-family: Arial, Helvetica, sans-serif; size: 20px;}
+ul {color:  rgb(91, 106, 243); font-family: Arial, Helvetica, sans-serif; size: 15px;}
+p {color:  rgb(91, 106, 243); font-family: Arial, Helvetica, sans-serif; size: 15px;}
+blockquote {color: rgb(91, 106, 243); font-family: Arial, Helvetica, sans-serif; size: 15px;}
